@Bug: 10731 - Fixes to the issues with the drill down and filter not showing up inside the App.

--- a/gui/src/public/css/dashboardEditor.scss
+++ b/gui/src/public/css/dashboardEditor.scss
@@ -126,6 +126,7 @@ padding-right: 1em;
     position: absolute;
     width: 100%;
     background-image: linear-gradient(to right top, #3d6776, #4b6f7c, #587682, #657e88, #72868e);
+    min-height: 65px;
   }
   .dashboard-viewer-div{
     position: absolute;
